@@ -312,7 +312,7 @@ public class ByteUtil {
     public static String toHexString(byte[] bytes) {
         StringBuilder sb = new StringBuilder();
         for (byte b : bytes) {
-            sb.append(String.format("%02x", b));
+            sb.append("%02x".formatted(b));
         }
         return sb.toString();
     }
